--- a/deployment.yaml
+++ b/deployment.yaml
@@ -43,10 +43,24 @@ kind: Service
 metadata:
   name: deploy-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 30001
-      targetPort: 8080
-      protocol: TCP
+    - port: 8080
   selector:
-      name: app-pod
+    name: app-pod
+
+
+# ---
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: deploy-service
+# spec:
+#   type: LoadBalancer
+#   ports:
+#     - port: 30001
+#       targetPort: 8080
+#       protocol: TCP
+#   selector:
+#       name: app-pod
