--- a/deployment.yaml
+++ b/deployment.yaml
@@ -31,13 +31,23 @@ kind: Service
 metadata:
   name: deploy-service-shopping
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-    - port: 30001
-      targetPort: 8080
-      protocol: TCP
+    - port: 8080
   selector:
-      name: app-pod-shopping
+    name: app-pod-shopping
 
----
-  
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: deploy-service-shopping
+# spec:
+#   type: LoadBalancer
+#   ports:
+#     - port: 30001
+#       targetPort: 8080
+#       protocol: TCP
+#   selector:
+#       name: app-pod-shopping
+
+# ---
